Fix dark mode colors

--- a/client/renderer/css/main.css
+++ b/client/renderer/css/main.css
@@ -55,6 +55,10 @@ input,
 textarea {
   font-family: aktiv-grotesk, sans-serif;
   color: #475569;
+
+  @media (prefers-color-scheme: dark) {
+    color: #e5e5e5;
+  }
 }
 
 html,
